@@ -36,6 +36,7 @@ ListManager
 		user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
+        innodb = enabled;
 	}
 
 	SQLite {
