@@ -51,6 +51,7 @@ ListManager
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
+        innodb = enabled;
 	}
 
 	SQLite {
