@@ -1,12 +1,15 @@
-cd tests/posix_fs
+1) set the purpose environment variable
+export PURPOSE=TMP_FS_MGR
 
-On a scratch test system, run:
-./1-test-setup.sh
-* creates and configure robinhood database
-* create a loopback ext3 filesystem
+2) setup the test environment
+    (this creates a loopback ext3 filesystem)
+./1-test_setup.sh
 
-tests:
-	for brief output:
-		./2-run-tests.sh -q
-	for full output:
-		./2-run-tests.sh
+3) Run the tests
+
+for brief output:
+	./2-run-tests.sh -q
+for full output:
+	./2-run-tests.sh
+to run only some tests:
+    ./2-run_tests.sh 3,4
